Add new errorcode 2628 (SQL Server 2019 DataTruncation)
Also uses cause not next exception for exception chaining.
Optimize getStateCode to use Integer.valueOf.